--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.java.home=C:/Program Files (x86)/Eclipse Adoptium/jdk-16.0.2.7-hotspot
+org.gradle.jvmargs=-Xmx6G -XX:+UnlockExperimentalVMOptions -XX:+UseG1GC -XX:G1NewSizePercent=20 -XX:G1ReservePercent=20 -XX:MaxGCPauseMillis=50 -XX:G1HeapRegionSize=32M
+#org.gradle.java.home=C:/Program Files (x86)/Eclipse Adoptium/jdk-16.0.2.7-hotspot
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
