--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,10 @@ dependencies {
 	implementation 'junit:junit:4.13.2'
 	implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
+	implementation(files('libs/flanagan.jar'))
+
 	// To change the versions see the gradle.properties file
-	implementation "com.mojang:minecraft:${project.minecraft_version}"
+	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
